Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-170

OSCC_FLAG_LOW is always set and oscc_grow_count will never grow

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.1.0, Lustre 1.8.6
    • Lustre 1.8.6
    • None
    • 3
    • 5080

      I found osc_precreate is not working in the expected way, we always precreate 32 objects for some reason.

      After digging into code I found there is a bug:

      we are using req::rq_async_args.space[0] to store original value of oscc_grow_count, and using req::rq_async_args.pointer_arg[0] to store oscc, however, ptlrpc_async_args is a union, which means req::rq_async_args.space[0] will always be overwritten by a ossc (a pointer), and osc_interpret_create will always get true on this condition "if (diff < (int) req->rq_async_args.space[0])" and reset oscc_grow_count to OST_MIN_PRECREATE and set OSCC_FLAG_LOW.

      The fix will be very simple but it has big impact on performance of file creation so I set priority as "major", I will post patch for it very soon.

            liang Liang Zhen (Inactive)
            liang Liang Zhen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: