lustre/include/lustre_net.h
@@ -236,7 +236,7 @@ struct ptlrpc_client {
 union ptlrpc_async_args {
         /**
          * Scratchpad for passing args to completion interpreter. Users
-         * cast to the struct of their choosing, and LASSERT that this is
+         * cast to the struct of their choosing, and CLASSERT that this is
          * big enough.  For _tons_ of context, OBD_ALLOC a struct and store
          * a pointer to it here.  The pointer_arg ensures this struct is at
          * least big enough for that.
